v4l2src: interlace caps feature broken encoder feature on gst1.18
Below will add interlace caps without any query from driver. It will cause gst pipeline chose interlace caps with below pipeline. Below pipeline can chose progress video on gst1.16 or without below code. Do you have any suggestion?
/* Add a variant of the caps with the Interlaced feature so we can negotiate it if needed */
4627 add_alternate_variant (v4l2object, ret, gst_caps_get_structure (ret, 4628 gst_caps_get_size (ret) - 1));
gst-launch-1.0 v4l2src device=/dev/video2 ! v4l2h264enc ! fakesink -v